--- a/electron app/PresentWindow.css
+++ b/electron app/PresentWindow.css
@@ -1,8 +1,10 @@
 div {
 	background-color: white;
 	margin: 10%;
-	/*padding-left: 10%;
-	padding-right: 10%;*/
+	/*
+	padding-left: 10%;
+	padding-right: 10%;
+	*/
 	text-align: center;
 }
 
