--- a/electron app/MainWindow.css
+++ b/electron app/MainWindow.css
@@ -1,30 +1,43 @@
 body {
 	background-color: #EAE5DD;
+	font-family: sans-serif;
+	text-align: center;
 }
 
 .slide {
 	background-color: white;
 	margin-left: 10%;
 	margin-right: 10%;
-	/*
-	padding-left: 10%;
-	padding-right: 10%;
-	*/
-	height:75vh;
+	height: 75vh;
 	text-align: center;
+	box-shadow: 5px 10px 18px #888888;
+	overflow: hidden;
+	align-content: center;
+	display: block;
 }
 
 .slide-title {
 	font-size: 250%;
 	position: relative;
-	top: 25%;
-	transform: translateY(-50%);
+	font-family: sans-serif;
+	margin-left: -28rem;
 }
 
 .slide-text {
-	margin: 0;
 	font-size: 100%;
 	position: relative;
-	top: 45%;
-	transform: translateY(-50%);
+	font-family: sans-serif;
+	margin-left: -28rem; 
+}
+
+.title-div {
+	position: absolute;
+	top: 15%;
+	margin-left: 50%; 
+}
+
+.text-div {
+	position: absolute;
+	top: 30%;
+	margin-left: 50%; 
 }
