--- a/electron app/MainWindow.css
+++ b/electron app/MainWindow.css
@@ -12,7 +12,6 @@ body {
 	text-align: center;
 	box-shadow: 5px 10px 18px #888888;
 	overflow: hidden;
-	align-content: center;
 	display: block;
 }
 
@@ -20,24 +19,30 @@ body {
 	font-size: 250%;
 	position: relative;
 	font-family: sans-serif;
-	margin-left: -28rem;
+	text-align: center;
+	max-width: 50vw;
 }
 
 .slide-text {
 	font-size: 100%;
 	position: relative;
 	font-family: sans-serif;
-	margin-left: -28rem; 
+	text-align: center;
+	max-width: 50vw;
 }
 
 .title-div {
 	position: absolute;
 	top: 15%;
-	margin-left: 50%; 
+	width: 50%;
+	margin: 0 auto;
+	transform: translateX(25%);
 }
 
 .text-div {
 	position: absolute;
 	top: 30%;
-	margin-left: 50%; 
+	width: 50%;
+	margin: 0 auto;
+	transform: translateX(25%);
 }
