--- a/electron app/MainWindow.css
+++ b/electron app/MainWindow.css
@@ -20,6 +20,8 @@ body {
 	position: relative;
 	font-family: sans-serif;
 	text-align: center;
+	width: 50vw;
+	height: 10vh;
 	max-width: 50vw;
 	max-height: 10vh;
 }
@@ -29,6 +31,8 @@ body {
 	position: relative;
 	font-family: sans-serif;
 	text-align: center;
+	width: 50vw;
+	height: 40vh;
 	max-width: 50vw;
 	max-height: 40vh;
 }
@@ -36,15 +40,26 @@ body {
 .title-div {
 	position: relative;
 	top: 12.5%;
-	/*width: 30%;*/
 	margin: 0 auto;
-	/*transform: translateX(-10%);*/
 }
 
 .text-div {
 	position: relative;
 	top: 17.5%;
-	/*width: 30%;*/
 	margin: 0 auto;
-	/*transform: translateX(-10%);*/
+}
+
+.right-side-div {
+	background: silver;
+	position: fixed;
+	font-size: 100%;
+	text-align: center;
+	top: 0%;
+	right: 0%;
+	height: 100vh;
+	width: 15vw;
+}
+
+.laTex-Title {
+	font-size: 150%;
 }
