--- a/electron app/MainWindow.css
+++ b/electron app/MainWindow.css
@@ -35,6 +35,7 @@ body {
 	height: 40vh;
 	max-width: 50vw;
 	max-height: 40vh;
+	white-space: pre-wrap;
 }
 
 .title-div {
@@ -50,16 +51,50 @@ body {
 }
 
 .right-side-div {
-	background: silver;
+	background: white;
 	position: fixed;
 	font-size: 100%;
-	text-align: center;
+	text-align: left;
 	top: 0%;
 	right: 0%;
 	height: 100vh;
-	width: 15vw;
+	width: 20vw;
+	padding: 20px;
+	line-height: 2;
+	box-shadow: 8px 0 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.latex-btn {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #0D5D56;
+	color: white;
+	size: 20px;
+	border-radius: 8px;
+	margin-top: 20px;
+	border: none;
+	padding: 8px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.latex-btn:hover {
+	background-color: #073733;
+	color: white;
+	size: 20px;
+	border-radius: 8px;
+}
+
+#LaTexText {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .laTex-Title {
 	font-size: 150%;
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	transform: translateX(25%);
 }
