--- a/electron app/MainWindow.css
+++ b/electron app/MainWindow.css
@@ -30,7 +30,7 @@ body {
 	font-size: 100%;
 	position: relative;
 	font-family: sans-serif;
-	text-align: center;
+	text-align: left;
 	width: 50vw;
 	height: 40vh;
 	max-width: 50vw;
